--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ button {
 
 body {
   font-family: "Roboto", sans-serif;
+  /* padding-top: 80px; */
 }
 .container {
   width: 1200px;
@@ -114,35 +115,60 @@ body {
 
 /* Header */
 .header {
+  /* position: fixed; */
+  /* top: 0;
+  left: 0;
+  width: 100%; */
+  /* min-height: 79px; */
+
   background-color: var(--primary-background-color);
   border-bottom: 1px solid #ececec;
 }
 
-.header-container,
-.nav-list {
+.header-container {
   display: flex;
+  align-items: center;
 }
 
-.header-nav {
+.header-nav,
+.nav-list {
   display: flex;
   align-items: center;
 }
 
 .header-contacts {
   display: flex;
+  align-items: center;
   margin-left: auto;
 }
 
+.header-cont-item {
+  display: flex;
+  align-items: center;
+}
+
 .header-items {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-left {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.4;
-  letter-spacing: 0.02em;
 }
+
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
 .nav-list-items:not(:last-child) {
   margin-right: 50px;
 }
@@ -168,6 +194,21 @@ body {
   color: var(--accent-color);
 }
 
+.nav-list-items {
+  position: relative;
+}
+
+.header-left.active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  bottom: -1px;
+}
+
 .mail-icon {
   fill: var(--second-text-color);
   margin-right: 10px;
@@ -191,6 +232,7 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   width: 1600px;
+  /* height: 600px; */
   /* padding-left: 15px;
   padding-right: 15px; */
   margin: 0 auto;
@@ -208,7 +250,7 @@ body {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
   font-weight: 900;
   font-size: 44px;
@@ -222,21 +264,20 @@ body {
 .hero-btn {
   display: block;
   min-width: 200px;
-  background-color: var(--accent-color);
-  height: 50px;
   border: none;
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
 
-  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--third-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* преимущества */
@@ -296,9 +337,31 @@ body {
   background-color: var(--primary-background-color);
 }
 
-.services .items {
+.services .services-items {
   flex-basis: calc((100% - 3 * 30px) / 3);
   margin-left: 30px;
+}
+
+.services-items {
+  position: relative;
+}
+
+.services-text {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--third-text-color);
 }
 
 /* команда */
@@ -369,10 +432,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
   fill: var(--primary-icon-color);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -407,10 +478,18 @@ body {
   display: flex;
   border-radius: 4px;
   border: 1px solid #afb1b8;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-img-icon {
   fill: var(--primary-icon-color);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -505,6 +584,10 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
@@ -549,7 +632,12 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   background-color: var(--second-decor-color);
+
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .filter-item:not(:last-child) {
   margin-right: 8px;
 }
@@ -570,10 +658,15 @@ body {
   margin-left: -30px;
   margin-bottom: -30px;
 }
+
 .worklist-items {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .worklist-items:hover,
@@ -584,6 +677,35 @@ body {
 
 .work-link {
   display: block;
+}
+
+.work-link-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-link-desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--third-text-color);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translate(0, 100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-link:hover .work-link-desc {
+  transform: translate(0, 0);
 }
 
 .worklist-name {
@@ -609,4 +731,59 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+
+/* модалка */
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  min-height: 581px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: var(--primary-background-color);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: opacity;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
