--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-left {
@@ -210,11 +210,13 @@ body {
 .mail-icon {
   fill: var(--second-text-color);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tell-icon {
   fill: var(--second-text-color);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-right:hover .mail-icon,
@@ -574,7 +576,7 @@ body {
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
 
-  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
